syntax = "proto3";

package apis.v1;

import "apicentral.proto";

option go_package = "github.com/Axway/agent-sdk/pkg/proto";

service WatchService {
    rpc CreateWatch(stream Request) returns (stream Event) {
    }
}

message Request {
    string selfLink = 1;
    string token = 2;
}

message Event {
    string id = 1;
    string time = 2;
    string version = 3;
    string product = 4;
    string correlationId = 5;
    Organization organization = 6;
    enum Type {
        CREATED = 0;
        UPDATED = 1;
        DELETED = 2;
    }
    Type type = 7;
    .amplifycentral.datamodel.ResourceInstance payload = 8;
}

message Organization {
    string id = 1;
}
